--- a/app/views/accommodations/index.slim
+++ b/app/views/accommodations/index.slim
@@ -1,5 +1,7 @@
 = render 'events/menu', event: @event
 
+- breadcrumb :accommodations, @event
+
 .ui.segment
   - unless @accommodations.empty?
     = render 'table'
