--- a/app/views/accommodations/_table.slim
+++ b/app/views/accommodations/_table.slim
@@ -1,14 +1,15 @@
-table.ui.very.basic.table
+table.ui.very.basic.large.celled.padded.table 
   thead
     tr
       th = Accommodation.human_attribute_name(:event)
       th = Accommodation.human_attribute_name(:number_of_beds)
-      th = t('shared.table.actions')
+      - if can? :manage, Accommodation
+        th = t('shared.table.actions')
   tbody
     - @accommodations.each do |accommodation|
       tr
         td = accommodation.event.try(:name)
         td = accommodation.number_of_beds
-        td
-          - if can? :manage, accommodation
+        - if can? :manage, accommodation
+          td.actions
             = render 'shared/action_links', object: accommodation
