--- a/app/views/activities/index.html.slim
+++ b/app/views/activities/index.html.slim
@@ -9,10 +9,12 @@
         th = Event.human_attribute_name(:title)
         th = Event.human_attribute_name(:ingress)
         /th = Event.human_attribute_name(:participations)
-        th = "Antall"
+        th
         - if can? :manage, Activity
           th = t('shared.table.actions')
 
       = render @activities
 
-= link_to t('views.activities.index.download_xlsx'), event_activities_path(format: :xlsx), class: 'ui button'
+= link_to  event_activities_path(format: :xlsx), class: 'ui secondary button' do
+  i.icon.download
+  = t('shared.buttons.download_xlsx')
