--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -237,3 +237,20 @@ td.actions {
   text-align: right;
   max-width: 10%;
 }
+
+.ui.very.relaxed.items > .item {
+  margin: 3.5em 0;
+}
+
+.full-width {
+  width: 100%;
+}
+
+span.time {
+  float: right;
+}
+
+#event-stats {
+  border: 2px solid $knowit-black-color;
+  padding: 20px;
+}
