--- a/app/views/events/_stats.slim
+++ b/app/views/events/_stats.slim
@@ -1,4 +1,4 @@
-.ui.huge.horizontal.divided.list#event-stats
+.ui.huge.horizontal.divided.list.inverted.full-width#event-stats
   .item
     i.large.building.icon
     .content
