--- a/app/views/participations/_table.slim
+++ b/app/views/participations/_table.slim
@@ -2,7 +2,7 @@ table.ui.very.basic.table
   thead
     tr
       th = User.human_attribute_name(:name)
-      - if current_user.admin?
+      - if current_user.administrator?
         th = Participation.human_attribute_name(:single_room)
         th = Participation.human_attribute_name(:request_for_sharing_room)
       th = Participation.human_attribute_name(:extended_stay)
@@ -16,7 +16,7 @@ table.ui.very.basic.table
     - participations.each do |participation|
       tr
         td = maybe participation.user.full_name
-        - if current_user.admin?
+        - if current_user.administrator?
           td = yesno_icon participation.single_room
           td = maybe participation.request_for_sharing_room
         td = yesno_icon participation.extended_stay
