--- a/app/views/events/_form.html.slim
+++ b/app/views/events/_form.html.slim
@@ -1,9 +1,9 @@
 = simple_form_for @event, html: { class: 'ui large form' } do |f|
-  .ui.checkbox
+
+  .ui.checkbox.field
     = f.input :is_published, as: :boolean
 
-  = f.input :event_type, collection: Event.event_types.keys,
-    input_html: { class: 'ui dropdown selection' }
+  = f.input :event_type, collection: Event.event_types.keys, input_html: { class: 'ui dropdown selection' }
 
   .three.fields
     .field = f.input :name, as: :string
