--- a/app/views/events/_table.slim
+++ b/app/views/events/_table.slim
@@ -13,7 +13,8 @@
             th = t('shared.table.actions')
     tbody
       - events.each do |event|
-        tr
+        - classes = 'locked' if event.locked?
+        tr class=classes
           td = link_to event.name, event_path(event)
           td = event.description
           td = event.starting_at.strftime("%d/%m/%Y")
@@ -29,5 +30,5 @@
                   i.icon.pencil
                   = t('.edit_participation')
             - if can? :manage, event
-              td = event.is_published
+              td = yesno_icon(event.is_published)
               td.actions = render 'shared/action_links', object: event
