--- a/app/views/venues/_table.slim
+++ b/app/views/venues/_table.slim
@@ -14,4 +14,4 @@
           td = venue.description
           td = venue.capacity
           - if can? :manage, event
-            td = render 'shared/action_links', object: venue 
+            td.actions = render 'shared/action_links', object: venue 
