Fixes locking of buttons in event, rendering of buttons

--- a/app/assets/stylesheets/tables.scss
+++ b/app/assets/stylesheets/tables.scss
@@ -8,7 +8,7 @@
 
   table {
     tr.locked td {
-      &, &:not(.actions) a, .label {
+      &, &:not(.actions) a:not(.button), .label {
         color: $knowit-primary-green-color-lighter;
         border-color: $knowit-primary-green-color-lighter;
       }
@@ -17,11 +17,21 @@
     td i.icon.remove {
       color: $knowit-primary-green-color-lighter;
     }
+
+    td.actions {
+      width: 15%;
+    }
+
+
     td.actions a.circular.icon.button { 
       float: left;
-      overflow: -webkit-paged-x;
       padding: 0.4em;
       background: $knowit-primary-green-color-lighter;
+
+      & > .icon {
+        width: 1em;
+        height: 1em;
+      }
 
       &.toggled {
         background: $knowit-primary-purple-color-light;
