--- a/app/views/shared/_crud_header.slim
+++ b/app/views/shared/_crud_header.slim
@@ -23,19 +23,23 @@
 
   - else
     h1.title
-      - model_name = controller_name.classify.constantize.model_name
-      - case action_name.to_sym
-      - when :index
-        = t("helpers.actions.#{action_name.downcase}", model: model_name.human(count: 2))
-        span.count
-          span= crudable.count
-      - when :show
-        = t("helpers.actions.#{action_name.downcase}", record: crudable.to_s)
-      - else
-        = t("helpers.actions.#{action_name.downcase}", model: model_name.human.downcase)
+      - if crud?
+        - model_name = controller_name.classify.constantize.model_name
+        - case action_name.to_sym
+        - when :index
+          = t("helpers.actions.#{action_name.downcase}", model: model_name.human(count: 2))
+          span.count
+            span= crudable.count
+        - when :show
+          = t("helpers.actions.#{action_name.downcase}", record: crudable.to_s)
+        - else
+          = t("helpers.actions.#{action_name.downcase}", model: model_name.human.downcase)
 
-      span style='float: right'
-        = render 'shared/crud_links', object: crudable
+        span style='float: right'
+          = render 'shared/crud_links', object: crudable
+      
+      - else
+        = content_for :title
 
     - if content_for? :auxiliary_menu
       #auxiliary-menu
