Redirect to original page after signin, minor fixes

--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -228,7 +228,8 @@ footer {
 }
 
 .ui.label.knowit-blue {
-  background-color: $knowit-complementary-blue-color-lighter;
+  color: $knowit-complementary-blue-color-lightest;
+  background-color: $knowit-complementary-blue-color-light;
 }
 
 .ui.label.session-accepted {
