Display event image.

--- a/app/views/participations/edit.html.slim
+++ b/app/views/participations/edit.html.slim
@@ -1,5 +1,7 @@
 - breadcrumb :participations, @event
 
+= image_tag @event.image_url, class: 'event-image'
+
 .ui.segment
   .ui.large.list.horizontal
     .item
