--- a/app/views/participations/new.html.slim
+++ b/app/views/participations/new.html.slim
@@ -2,5 +2,7 @@
 
 - breadcrumb :participations, @event
 
+= image_tag @event.image_url, class: 'event-image'
+
 .ui.segment
   = render 'form', event: @event, participation: @participation
