--- a/app/views/events/_form.html.slim
+++ b/app/views/events/_form.html.slim
@@ -1,7 +1,6 @@
 = simple_form_for @event, html: { class: 'ui large form' } do |f|
 
-  .ui.checkbox.field
-    = f.input :is_published, as: :boolean
+  = f.input :is_published, as: :boolean, wrapper: :ui_checkbox
 
   = f.input :event_type, collection: Event.event_types.keys, input_html: { class: 'ui dropdown selection' }
 
