Finally tracks down and fixes JS not loading properly issue.

--- a/app/views/layouts/pages.html.slim
+++ b/app/views/layouts/pages.html.slim
@@ -6,6 +6,7 @@ html
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
     = stylesheet_link_tag "https://fonts.googleapis.com/css?family=Sarpanch:400,500,600,700,800,900"
+    = javascript_pack_tag    'application'
 
   body#frontpage
     = render 'layouts/menu'
