Adds custom fields

--- a/app/views/events/_form.html.slim
+++ b/app/views/events/_form.html.slim
@@ -15,5 +15,10 @@
   = f.simple_fields_for :images do |image|
     = image.input :file
 
+  = f.simple_fields_for :custom_fields do |g|
+    = render 'custom_field_fields', f: g
+    .links
+      = link_to_add_association "<i class='plus icon'></i> Add field".html_safe, f, :custom_fields, class: 'ui secondary icon button'
+
   .actions
     = f.submit class: 'ui large primary button'
