Adds description on new participation

--- a/app/views/participations/new.html.slim
+++ b/app/views/participations/new.html.slim
@@ -2,7 +2,11 @@
 
 - breadcrumb :participations, @event
 
-= image_tag @event.image_url, class: 'event-image'
+.ui.grid
+  .four.wide.column
+    = image_tag @event.image_url, class: 'event-image'
+  .twelve.wide.column
+    span = @event.description
 
 .ui.segment
   = render 'form', event: @event, participation: @participation
