Adds default activity

--- a/app/views/activities/_activity.html.slim
+++ b/app/views/activities/_activity.html.slim
@@ -2,5 +2,6 @@ tr
   td = link_to activity.title, event_activity_path(@parent, activity)
   td = activity.ingress
   td = activity.participations.count
+  td = yesno_icon(activity.default_activity)
   - if can? :manage, activity
     td.actions = render 'shared/action_links', object: activity
