--- a/app/views/activities/_form.html.slim
+++ b/app/views/activities/_form.html.slim
@@ -4,4 +4,5 @@
   = f.input :description
   = f.input :max_number_of_participants, as: :integer
   = f.input :price, as: :integer
+  = f.input :default_activity, as: :boolean, wrapper: :ui_checkbox
   = f.button :submit
