--- a/app/views/events/_custom_field_fields.slim
+++ b/app/views/events/_custom_field_fields.slim
@@ -1,5 +1,7 @@
-.inline.fields.nested-fields
-  .two.fields
+tr.nested-fields
+  td.three.fields
     = f.input :name
+    = f.input :description
     = f.input :data_type, collection: CustomField::DATA_TYPES, input_html: { class: 'ui dropdown selection' }
-  = link_to_remove_association "<i class='minus icon' ></i> Remove".html_safe, f, class: 'ui red icon button'
+  td.field
+    = link_to_remove_association "<i class='minus icon' ></i> Remove".html_safe, f, class: 'ui red icon button'
