--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -15,7 +15,8 @@
 }
 
 .event-image {
-  height: 200px;
+  max-width: 100%;
+  max-height: 200px;
 }
 
 .new_event_session.ui.form {
@@ -34,7 +35,7 @@
       color: #DB2828;
     }
   }
-  
+
   .field > .hint {
     margin-bottom: 0.5rem;
   }
