Adds company field to profile. The field is only editable by administrators, as it is supposed to be populated by AD.

--- a/app/views/users/_fields.slim
+++ b/app/views/users/_fields.slim
@@ -27,6 +27,7 @@ h3= Passport.model_name.human
         = f.radio_button :locale, locale
         = f.label t("misc.locale.#{locale}")
 
+= f.input :company, as: :string, disabled: !current_user.administrator?, hint: t('.company_hint')
 = f.input :allergies, as: :string
 
 = f.input :about, as: :text
