--- a/app/views/activities/show.html.slim
+++ b/app/views/activities/show.html.slim
@@ -2,36 +2,37 @@
 
 - breadcrumb :activities, @event
 
-/ .ui.items
-/   .item
-/     - unless @activity.images.blank?
-/       .image
-/         = image_tag @activity.images.last.file.url, width: 200
-/     .content
-/       .meta
-/         - if @activity.ingress?
-/           = @activity.ingress
-/       .description
-/         = @activity.description
-/       .extra
-/         .ui.horizontal.list
-/           - if @activity.max_number_of_participants?
-/             .item
-/               i.users.icon
-/               .content
-/                 = "Deltakere: #{@activity.participations.count}"
-/             .item
-/               i.users.icon
-/               .content
-/                 = "Maks antall deltakere: #{@activity.max_number_of_participants}"
-/           - if @activity.price?
-/             .item
-/               i.money.icon
-/               .content
-/                 = "Pris for aktiviteten: #{@activity.price} kr"
+.ui.items
+  .item
+    - unless @activity.images.blank?
+      .image
+        = image_tag @activity.images.last.file.url, width: 200
+    .content
+      .meta
+        - if @activity.ingress?
+          = @activity.ingress
+      .description
+        = @activity.description
+      .extra
+        .ui.horizontal.list
+          - if @activity.max_number_of_participants?
+            .item
+              i.users.icon
+              .content
+                = "Deltakere: #{@activity.participations.count}"
+            .item
+              i.users.icon
+              .content
+                = "Maks antall deltakere: #{@activity.max_number_of_participants}"
+          - if @activity.price?
+            .item
+              i.money.icon
+              .content
+                = "Pris for aktiviteten: #{@activity.price} kr"
 
-/ .ui.hidden.divider
+.ui.hidden.divider
 
-.ui.segment
-  - unless @activity.participations.empty?
-    == render 'participations/table', participations: @activity.participations
+- if current_user.administrator?
+  .ui.segment
+    - unless @activity.participations.empty?
+      == render 'participations/table', participations: @activity.participations
