--- a/app/views/events/_card.slim
+++ b/app/views/events/_card.slim
@@ -15,12 +15,16 @@
     .header
       = event.name
     .meta
+      - if event.starting_at.to_date == event.ending_at.to_date
+        span class="date"
+          => event.starting_at.strftime("%d. %b %Y %H:m")
+      - else
       span class="date"
         => event.starting_at.strftime("%d. %b %Y")
         | &mdash;
         =< event.ending_at.strftime("%d. %b %Y")
     .description
-      = event.description
+      = event.short_description.present? ? event.short_description : event.description
   .extra.content
     span
       i.users.icon>
