--- a/app/views/events/_card.slim
+++ b/app/views/events/_card.slim
@@ -17,7 +17,7 @@
     .meta
       - if event.starting_at.to_date == event.ending_at.to_date
         span class="date"
-          => event.starting_at.strftime("%d. %b %Y %H:%m")
+          => event.starting_at.strftime("%d. %b %Y %H:%M")
       - else
         span class="date"
           => event.starting_at.strftime("%d. %b %Y")
