--- a/app/views/events/show.html.slim
+++ b/app/views/events/show.html.slim
@@ -2,18 +2,19 @@
 
 - breadcrumb :event, @event
 
-= render 'stats'
 
 - if @event.unlocked?
   .button
     - unless @event.user_already_signed_up? current_user
-      = link_to new_event_participation_path(@event), class: 'ui positive button' do
+      = link_to new_event_participation_path(@event), class: 'ui positive button full-width' do
         i.icon.plus
         = t('events.table.add_participation')
     - else
-      = link_to edit_event_participation_path(@event, id: @event.user_participation(current_user)), class: 'ui primary button' do
+      = link_to edit_event_participation_path(@event, id: @event.user_participation(current_user)), class: 'ui primary button full-width' do
         i.icon.pencil
         = t('events.table.edit_participation')
+
+= render 'stats'
 
 = image_tag @event.image_url, class: 'event-image'
 
