Use simple_format to transform aktivity description to HTML.

--- a/app/views/activities/show.html.slim
+++ b/app/views/activities/show.html.slim
@@ -12,7 +12,7 @@
         - if @activity.ingress?
           = @activity.ingress
       .description
-        = @activity.description
+        = simple_format @activity.description
       .extra
         .ui.horizontal.list
           - if @activity.max_number_of_participants?
